Implemented wasm building pipeline

--- a/web/apps/website/content/theory/moire_1D_lattice.mdx
+++ b/web/apps/website/content/theory/moire_1D_lattice.mdx
@@ -3,8 +3,8 @@ export const meta = {
 };
 
 import { Callout } from 'nextra/components';
-import PassivePlot from '../../src/plots/PassivePlot';
-import InteractivePlot from '../../src/plots/InteractivePlot';
+import PassivePlot from '../../src/components/plots/PassivePlot';
+import InteractivePlot from '../../src/components/plots/InteractivePlot';
 
 # 1D Moiré Lattices: Mathematical Foundation
 
