Introduced sophisticated voronoi cell calculations and benchmarks
- Complete implementation of the voronoi_cells.rs
- Added high performance crates for 2d and 3d voronoi cell calculation
- Added fallbacks for 2d and 3d voronoi cell calculation
- As of now, the fallbacks are ~30x-100x faster than the crates; this is due to excess allocation of neighbors.
- These methods are kept though, because they might come in handy when investigating the moire superlattice
- This means that the voronoi_cells.rs will need revision once the moire lattice is well defined

--- a/python-example/lattice_visualization.ipynb
+++ b/python-example/lattice_visualization.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "37b865ad",
    "metadata": {},
    "outputs": [
@@ -50,13 +50,13 @@
     "# Add the local package path for development\n",
     "sys.path.insert(0, os.path.join(os.path.dirname(os.getcwd()), 'rust-python', 'python'))\n",
     "\n",
-    "print(\"📦 Setting up moire_lattice_py...\")\n",
+    "print(\"Setting up moire_lattice_py...\")\n",
     "try:\n",
     "    import moire_lattice_py as ml\n",
-    "    print(f\"✅ Successfully imported moire_lattice_py version {ml.version()}\")\n",
+    "    print(f\"Successfully imported moire_lattice_py version {ml.version()}\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Failed to import moire_lattice_py: {e}\")\n",
-    "    print(\"\\n🔧 To install the Python bindings:\")\n",
+    "    print(f\"Failed to import moire_lattice_py: {e}\")\n",
+    "    print(\"\\nTo install the Python bindings:\")\n",
     "    print(\"1. Install maturin: pip install maturin\")\n",
     "    print(\"2. Build the package: cd ../rust-python && maturin develop\")\n",
     "    raise ImportError(\"moire_lattice_py not available\")"
