feat: Implement 2D lattice validation and analysis in WASM
- Added functions for determining, validating, and analyzing 2D Bravais lattice types in `lattice_validations.rs`.
- Introduced `LatticeAnalysisResult` and `LatticeParameters` structs for detailed analysis results.
- Created multiple utility functions for batch validation and analysis of lattices.
- Developed a new interactive 2D Lattice Builder component in the website, allowing users to explore and create custom lattices.
- Enhanced visualization components to support high symmetry visualization and improved user experience.
- Updated UI components to reflect new lattice features and provide real-time analysis of lattice properties.

--- a/web/apps/website/content/theory/moire_lattice_builder_2D.mdx
+++ b/web/apps/website/content/theory/moire_lattice_builder_2D.mdx
@@ -2,6 +2,7 @@
 
 import { MDXMoireStateProvider } from '../../src/components/MDXMoireStateProvider';
 import { ContextMoireBuilder2D } from '../../src/components/ContextMoireBuilder2D';
+import { ContextHighSymmetryVisualization2D } from '../../src/components/ContextHighSymmetryVisualization2D';
 
 <MDXMoireStateProvider>
 
@@ -19,6 +20,25 @@ import { ContextMoireBuilder2D } from '../../src/components/ContextMoireBuilder2
   pointRadius={3}
   vectorWidth={2}
   gridOpacity={0.2}
+/>
+
+## Brillouin Zone Analysis
+
+The visualizations below show the reciprocal space representations of the moiré lattice. This lattice automatically updates when you change the parameters in the builder above.
+
+### Moiré Lattice Brillouin Zone
+
+<ContextHighSymmetryVisualization2D
+  height={350}
+  shells={2}
+  showLatticeVectors={true}
+  showGrid={true}
+  showAxes={true}
+  showPoints={true}
+  pointRadius={4}
+  vectorWidth={3}
+  gridOpacity={0.2}
+  useBaseLattice={false}
 />
 
 </MDXMoireStateProvider>
