Add 2D geometric functionalities including bounding box and transformations
- Implemented `BoundingBox2D` for efficient spatial queries, collision detection, and rendering optimizations.
- Added methods for creating bounding boxes from points, checking containment, intersection, and union operations.
- Introduced `Transform2D` for affine transformations including translation, rotation, and scaling of 2D geometric objects.
- Enhanced material properties with a new `Material` struct for electromagnetic simulations, including dielectric constants and refractive indices.
- Created common materials for easy access to frequently used material properties.
- Updated documentation and tests for new functionalities to ensure reliability and correctness.

--- a/python-example/moire_basics.ipynb
+++ b/python-example/moire_basics.ipynb
@@ -5,17 +5,7 @@
    "id": "90d9ad00",
    "metadata": {},
    "source": [
-    "# Moiré Lattice Basics\n",
-    "\n",
-    "This notebook demonstrates the basic usage of the Moiré Lattice library for creating and visualizing moiré patterns formed by overlapping 2D lattices.\n",
-    "\n",
-    "## Contents\n",
-    "1. **Creating Basic Lattices** - Generate hexagonal and other 2D lattices\n",
-    "2. **Building Moiré Patterns** - Apply transformations to create moiré lattices  \n",
-    "3. **Visualization** - Plot individual lattices and combined moiré patterns\n",
-    "4. **Analysis** - Inspect moiré properties like period ratios and commensurability\n",
-    "\n",
-    "Let's start by importing the necessary libraries."
+    "# Moiré Lattice Basics"
    ]
   },
   {
@@ -54,9 +44,7 @@
    "id": "770f3cf8",
    "metadata": {},
    "source": [
-    "## 1. Creating Basic Lattices\n",
-    "\n",
-    "Let's start by creating a hexagonal lattice, which is commonly used in studies of graphene and other 2D materials."
+    "## 1. Creating Basic Lattices"
    ]
   },
   {
@@ -165,9 +153,7 @@
    "id": "aafe7034",
    "metadata": {},
    "source": [
-    "## 2. Creating Moiré Patterns\n",
-    "\n",
-    "Now let's create a moiré pattern by applying a rotation and scaling transformation to our hexagonal lattice. We'll use the `PyMoireBuilder` to construct the moiré lattice."
+    "## 2. Creating Moiré Patterns"
    ]
   },
   {
@@ -252,13 +238,7 @@
    "id": "7efb1225",
    "metadata": {},
    "source": [
-    "## 3. Visualization\n",
-    "\n",
-    "Let's visualize the individual lattices and the resulting moiré pattern. We'll create a comprehensive plot showing:\n",
-    "1. The original lattice (Lattice 1)\n",
-    "2. The transformed lattice (Lattice 2) \n",
-    "3. Both lattices overlaid\n",
-    "4. The moiré superlattice"
+    "## 3. Visualization"
    ]
   },
   {
@@ -410,9 +390,7 @@
    "id": "cf9f89d5",
    "metadata": {},
    "source": [
-    "## 4. Analysis and Exploration\n",
-    "\n",
-    "Let's analyze different properties of our moiré lattices and explore how changing parameters affects the resulting patterns."
+    "## 4. Analysis and Exploration"
    ]
   },
   {
@@ -645,7 +623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basics",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
