--- a/python-example/photonic_band_diagram.ipynb
+++ b/python-example/photonic_band_diagram.ipynb
@@ -5,24 +5,7 @@
    "id": "8e8e39bc",
    "metadata": {},
    "source": [
-    "# Photonic Band Diagram Calculation with MPB and Custom Rust Lattice Library\n",
-    "\n",
-    "This notebook demonstrates how to calculate and plot photonic band diagrams for a hexagonal lattice using:\n",
-    "- The MPB (MIT Photonic Bands) solver for electromagnetic eigenmode calculations\n",
-    "- Our custom Rust-based lattice library for lattice generation and analysis\n",
-    "\n",
-    "We'll create a hexagonal photonic crystal with:\n",
-    "- Background material: ε = 13 (e.g., silicon)\n",
-    "- Air cylinders: radius = 0.48a\n",
-    "- First 8 bands for both TE and TM modes\n",
-    "\n",
-    "## Overview\n",
-    "1. Install MPB solver in Python environment\n",
-    "2. Import our custom Rust lattice library\n",
-    "3. Create and analyze hexagonal lattice properties\n",
-    "4. Visualize reciprocal lattice and Brillouin zone\n",
-    "5. Set up and solve MPB calculation\n",
-    "6. Plot TE and TM band structures"
+    "# Photonic Band Diagram Calculation with MPB and Custom Rust Lattice Library"
    ]
   },
   {
@@ -30,14 +13,12 @@
    "id": "c5fe91e2",
    "metadata": {},
    "source": [
-    "## 1. Install MPB Solver\n",
-    "\n",
-    "First, we need to install the MPB (MIT Photonic Bands) solver and required dependencies for electromagnetic band structure calculations."
+    "## 1. Install MPB Solver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f4c3d53d",
    "metadata": {},
    "outputs": [
@@ -154,16 +135,7 @@
     "for package in packages:\n",
     "    install_package(package)\n",
     "\n",
-    "print(\"\\nInstallation complete!\")\n",
-    "print(\"Note: If pymeeus fails to install, you may need to install Meep system-wide first:\")\n",
-    "print(\"  - On Ubuntu/Debian: sudo apt-get install meep libmeeus-dev\")\n",
-    "print(\"  - On macOS: brew install meep\")\n",
-    "print(\"  - Or compile from source: https://meep.readthedocs.io/en/latest/installation/\")\n",
-    "print(\"\\nMeep provides the full electromagnetic simulation pipeline including:\")\n",
-    "print(\"  - Flexible geometry creation with meep.Geometry\")\n",
-    "print(\"  - Advanced material assignment with meep.Medium\")\n",
-    "print(\"  - Integrated MPB solver for band structure calculations\")\n",
-    "print(\"  - Support for anisotropic and dispersive materials\")"
+    "print(\"\\nInstallation complete!\")"
    ]
   },
   {
@@ -171,14 +143,12 @@
    "id": "8e902eea",
    "metadata": {},
    "source": [
-    "## 2. Import Custom Rust Port and Required Libraries\n",
-    "\n",
-    "Now we'll import our custom Rust-based lattice library and other required packages for the band structure calculation."
+    "## 2. Import Custom Rust Port and Required Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cfe4dfc8",
    "metadata": {},
    "outputs": [
@@ -208,18 +178,18 @@
     "    import meep as mp  # Full Meep package\n",
     "    from meep import mpb  # MPB for band structure calculations\n",
     "    MEEP_AVAILABLE = True\n",
-    "    print(\"✓ Meep is available - will run full electromagnetic simulations\")\n",
+    "    print(\"Meep is available - will run full electromagnetic simulations\")\n",
     "except ImportError:\n",
     "    MEEP_AVAILABLE = False\n",
-    "    print(\"✗ Meep not available - will use simulated data for demonstration\")\n",
+    "    print(\"Meep not available - will use simulated data for demonstration\")\n",
     "    print(\"To install Meep: https://meep.readthedocs.io/en/latest/installation/\")\n",
     "\n",
     "# Import our custom Rust lattice library\n",
     "try:\n",
     "    import moire_lattice_py as msl\n",
-    "    print(\"✓ Custom Rust lattice library imported successfully\")\n",
+    "    print(\"Custom Rust lattice library imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"✗ Failed to import custom lattice library: {e}\")\n",
+    "    print(f\"Failed to import custom lattice library: {e}\")\n",
     "    print(\"Please ensure the Python package is built with: maturin develop\")\n",
     "    sys.exit(1)\n",
     "\n",
@@ -237,9 +207,7 @@
    "id": "f93bf5eb",
    "metadata": {},
    "source": [
-    "## 3. Create Hexagonal Lattice and Print Stats\n",
-    "\n",
-    "Let's create a hexagonal lattice using our custom Rust library and examine its properties in detail."
+    "## 3. Create Hexagonal Lattice and Print Stats"
    ]
   },
   {
@@ -326,9 +294,7 @@
    "id": "14fe0962",
    "metadata": {},
    "source": [
-    "## 4. Plot Reciprocal Lattice, Brillouin Zone, and High Symmetry Points\n",
-    "\n",
-    "Now we'll visualize the reciprocal lattice structure, first Brillouin zone, and mark the high symmetry points that are crucial for band structure calculations."
+    "## 4. Plot Reciprocal Lattice, Brillouin Zone, and High Symmetry Points"
    ]
   },
   {
@@ -645,7 +611,6 @@
    "source": [
     "## 5. Solve for Eigenenergies of Hexagonal Lattice\n",
     "\n",
-    "Now we'll set up the MPB calculation for our hexagonal photonic crystal:\n",
     "- Background material: ε = 13 (silicon)\n",
     "- Air cylinders: radius = 0.48a\n",
     "- Calculate first 8 bands for both TE and TM modes"
@@ -7937,14 +7902,12 @@
    "id": "358bb086",
    "metadata": {},
    "source": [
-    "## 6. Plot TE and TM Modes\n",
-    "\n",
-    "Finally, we'll create comprehensive band structure plots showing both TE and TM modes with proper labeling of high symmetry points and photonic band gaps."
+    "## 6. Plot TE and TM Modes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "70378a56",
    "metadata": {},
    "outputs": [
@@ -8129,14 +8092,6 @@
     "gap_text += f\"  Rod permittivity: {epsilon_rod:.1f}\\n\"\n",
     "gap_text += f\"  Background permittivity: {epsilon_background:.1f}\\n\\n\"\n",
     "\n",
-    "if MEEP_AVAILABLE:\n",
-    "    gap_text += \"✓ Results computed with Meep\\n\"\n",
-    "    gap_text += \"  Full electromagnetic simulation\\n\"\n",
-    "    gap_text += \"  Accurate material interfaces\\n\"\n",
-    "else:\n",
-    "    gap_text += \"⚠ Results are simulated data\\n\"\n",
-    "    gap_text += \"  Install Meep for real calculations\\n\"\n",
-    "\n",
     "ax4.text(0.05, 0.95, gap_text, transform=ax4.transAxes, fontsize=11, \n",
     "         verticalalignment='top', fontfamily='monospace')\n",
     "\n",
@@ -8155,7 +8110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "06f48530",
    "metadata": {},
    "outputs": [
@@ -8419,67 +8374,17 @@
     "print(f\"\\nLattice characterization complete using {'Meep' if MEEP_AVAILABLE else 'simulated data'}.\")\n",
     "\n",
     "# Add comparison metrics\n",
-    "print(f\"\\n📊 SUMMARY FOR LITERATURE COMPARISON:\")\n",
+    "print(f\"\\nSUMMARY FOR LITERATURE COMPARISON:\")\n",
     "print(f\"  Our calculation: {num_bands} bands each for TE/TM\")\n",
     "print(f\"  Literature: 4 TE modes, 6 TM modes\")\n",
     "print(f\"  Extra modes in our data: {max(0, num_bands-4)} TE, {max(0, num_bands-6)} TM\")\n",
     "print(f\"  → This is normal! We calculated more bands than shown in paper.\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b2b9315",
-   "metadata": {},
-   "source": [
-    "## Summary and Next Steps\n",
-    "\n",
-    "This notebook successfully demonstrates:\n",
-    "\n",
-    "✅ **Complete workflow** for photonic band structure calculations  \n",
-    "✅ **Integration** of custom Rust lattice library with MPB solver  \n",
-    "✅ **Comprehensive analysis** of hexagonal photonic crystal properties  \n",
-    "✅ **Professional visualization** of reciprocal lattice and band structures  \n",
-    "✅ **Detailed characterization** of TE and TM modes  \n",
-    "\n",
-    "### Key Results\n",
-    "\n",
-    "**Hexagonal Lattice Properties:**\n",
-    "- Coordination number: 6 (as expected for hexagonal close-packed)\n",
-    "- High packing fraction: ~0.91 (optimal for 2D circles)\n",
-    "- Well-defined high symmetry points: Γ, M, K\n",
-    "\n",
-    "**Photonic Crystal Design:**\n",
-    "- Background: Silicon (ε = 13)\n",
-    "- Air cylinders: r = 0.48a\n",
-    "- 8 calculated bands each for TE and TM modes\n",
-    "\n",
-    "**Band Structure Features:**\n",
-    "- Clear separation between TE and TM modes\n",
-    "- Photonic band gaps at high symmetry points\n",
-    "- Dispersion relationships following hexagonal symmetry\n",
-    "\n",
-    "### Potential Extensions\n",
-    "\n",
-    "1. **Parameter Sweeps:** Vary cylinder radius, dielectric contrast\n",
-    "2. **3D Calculations:** Extend to photonic crystal slabs\n",
-    "3. **Defect States:** Introduce point/line defects for waveguides\n",
-    "4. **Optimization:** Use genetic algorithms to find optimal structures\n",
-    "5. **Experimental Validation:** Compare with measured spectra\n",
-    "\n",
-    "### Technical Notes\n",
-    "\n",
-    "- **Performance:** Rust lattice library provides fast, accurate calculations\n",
-    "- **Flexibility:** Easy to modify for other lattice types (square, triangular, etc.)\n",
-    "- **Extensibility:** Framework ready for advanced photonic crystal design\n",
-    "- **Visualization:** High-quality plots suitable for publications\n",
-    "\n",
-    "This demonstrates the power of combining Rust's performance with Python's ecosystem for computational photonics research!"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basics",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
