--- a/python-example/photonic_band_diagram.ipynb
+++ b/python-example/photonic_band_diagram.ipynb
@@ -8384,7 +8384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "basics",
    "language": "python",
    "name": "python3"
   },
