--- a/python-example/moire_band_diagram.ipynb
+++ b/python-example/moire_band_diagram.ipynb
@@ -1860,7 +1860,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "basics",
    "language": "python",
    "name": "python3"
   },
