--- a/python-example/moire_basics.ipynb
+++ b/python-example/moire_basics.ipynb
@@ -623,7 +623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "basics",
    "language": "python",
    "name": "python3"
   },
